# srtd-media-batch

./: .dockerignore  .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  fly.toml  pyproject.toml
app/: app.py  pcolle.json
app/.scrapy/httpcache/pcolle/18/18fc2863cc60967346b980bbd6feb841cd984c07/: meta  pickled_meta  response_body  response_headers
app/.scrapy/httpcache/pcolle/1a/1a7c8f0da318f43319cdcff8c8fb8e4b6e247b83/: meta  pickled_meta  response_body  response_headers
app/.scrapy/httpcache/pcolle/1e/1e031180853c7043c8454e74ec309d22fee3da94/: meta  pickled_meta  request_headers  response_body  response_headers
app/.scrapy/httpcache/pcolle/2d/2dff8e8791320cd44c78e5bd42bbe8e69424400b/: meta  pickled_meta  response_body  response_headers
app/.scrapy/httpcache/pcolle/31/31db588e9f4195cd8fccd76fc8eca9090ecee9c6/: meta  pickled_meta  request_headers  response_body  response_headers
app/.scrapy/httpcache/pcolle/32/32fc12ffc638df36762f655fa1f89b9e03fef268/: meta  pickled_meta  response_body  response_headers
app/.scrapy/httpcache/pcolle/42/42408c823c23be6d10e7c6e2a0b8edbe49f240cb/: meta  pickled_meta  request_headers  response_body  response_headers
app/.scrapy/httpcache/pcolle/63/63129756f9f2918e1da964e4c560eabb710d4ceb/: meta  pickled_meta  response_body  response_headers
app/.scrapy/httpcache/pcolle/84/845237439be74041b854ba2a5d79a87b92f91822/: meta  pickled_meta  response_body  (+1 more)
app/crawler/: config.py  items.py  models.py  pipelines.py  settings.py  test_models.py
app/crawler/spiders/: pcolle.py
app/templates/: hello.html
db/: my.cnf
(+59 files in other folders)
