[tool.poetry]
name = "srtd-media-batch"
version = "0.1.0"
description = ""
authors = ["shinji <s.t.nkmss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
mysqlclient = "2.1.1"
flask = "^3.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
